--- a/.netlify-deploy-guide.md
+++ b/.netlify-deploy-guide.md
@@ -27,15 +27,22 @@ Netlify should automatically detect the settings from `netlify.toml`, but verify
 
 ### 3. Set Environment Variables
 
-Before deploying, you must add your Gemini API key:
+> [!IMPORTANT]
+> **API Key Rotation System**: The app now supports multiple API keys for automatic failover. When one key hits rate limits or quota exhaustion, it automatically tries the next key.
+
+Before deploying, add your Gemini API keys:
 
 1. In your Netlify site dashboard, go to **Site settings** → **Environment variables**
-2. Click **"Add a variable"** → **"Add a single variable"**
-3. Set:
-   - **Key**: `GEMINI_API_KEY`
-   - **Value**: Your Gemini API key
-   - **Scopes**: Check both "Same value for all deploy contexts"
-4. Click **"Create variable"**
+2. Add the following variables (add as many as you have):
+   - **Key**: `GEMINI_API_KEY_1` | **Value**: `AIzaSyCuua3O3CRb5L3xsGnJzLOw70SxXjkhGc8`
+   - **Key**: `GEMINI_API_KEY_2` | **Value**: `AIzaSyBZEZWXikmhtk3SUDKnLST5yLahMFW2zts`
+   - **Key**: `GEMINI_API_KEY_3` | **Value**: `AIzaSyDVQuG8wD2E76cTk3nRp74g-82iOF59ZyM`
+   - **Key**: `GEMINI_API_KEY_4` | **Value**: `AIzaSyC0ld1LoY1YY_qIY-bWIszx5fs_Z5EQKB0`
+3. For each variable, set **Scopes**: Check "Same value for all deploy contexts"
+4. Click **"Create variable"** for each
+
+> [!TIP]
+> You can add just one key if you prefer, but having multiple keys provides better reliability and higher effective rate limits.
 
 ### 4. Deploy
 
@@ -67,9 +74,13 @@ If you see `TS6305` or similar errors:
 ### Application Loads but API Calls Fail
 
 If the app loads but Gemini API calls don't work:
-- Verify `GEMINI_API_KEY` is set in Netlify environment variables
+- Verify at least `GEMINI_API_KEY_1` is set in Netlify environment variables
 - Check the browser console for error messages
-- Ensure the API key has the correct permissions
+- Ensure the API keys have the correct permissions
+- The app will automatically try backup keys if the primary fails
+
+> [!NOTE]
+> **How Key Rotation Works**: When an API call fails due to quota/rate limits, the system automatically tries the next available key. Check the browser console to see which key succeeded (e.g., "✓ Success with API key 2").
 
 ### 404 Errors on Page Refresh
 
